--- a/.env
+++ b/.env
@@ -12,18 +12,18 @@ PAGINATION_PAGE_SIZE=10
 
 # Ports used by React (frontend) and Express (backend)
 PORT=3000
-REACT_APP_BACKEND_PORT=3001
+REACT_APP_BACKEND_PORT=3003
 
 # Uncomment when testing with any of the Auth providers below
-#REACT_APP_AUTH_TOKEN_NAME="authAccessToken"
+REACT_APP_AUTH_TOKEN_NAME="authAccessToken"
 
 # Auth0 Configuration to be added to .env when running "yarn dev:auth0"
-#AUTH0_USERNAME="username@domain.com"
-#AUTH0_PASSWORD="s3cret1234$"
-#REACT_APP_AUTH0_DOMAIN="your-auth0-domain.auth0.com"
-#REACT_APP_AUTH0_CLIENTID="1234567890"
-#REACT_APP_AUTH0_AUDIENCE="https://your-auth0-domain.auth0.com/api/v2/"
-#REACT_APP_AUTH0_SCOPE="openid email profile"
+AUTH0_USERNAME="username@domain.com"
+AUTH0_PASSWORD="s3cret1234$"
+REACT_APP_AUTH0_DOMAIN="your-auth0-domain.auth0.com"
+REACT_APP_AUTH0_CLIENTID="1234567890"
+REACT_APP_AUTH0_AUDIENCE="https://your-auth0-domain.auth0.com/api/v2/"
+REACT_APP_AUTH0_SCOPE="openid email profile"
 
 # Okta Configuration to be added to .env when running "yarn dev:okta"
 #OKTA_USERNAME="username@domain.com"
